# PoliVPN

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
vpn-app/: package.json
vpn-app/src/: index.html  logs.html  logs.js  main.js  styles.css
vpn-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
vpn-app/src-tauri/capabilities/: default.json
vpn-app/src-tauri/icons/: icon.icns
vpn-app/src-tauri/src/: keyring.rs  lib.rs  main.rs  session_meta.rs  vpn_session_snapshot.rs
vpn-cli/: Cargo.toml
vpn-cli/src/: main.rs
vpn-core/: Cargo.toml
vpn-core/src/: auth.rs  config_xml.rs  diag.rs  error_chain.rs  io.rs  lib.rs  net_windows.rs  ppp.rs  ppp_proto.rs  routes.rs  tls.rs  tls_http.rs  tun.rs
vpn-helper/: Cargo.toml
vpn-helper/src/: main.rs  route_ops.rs
