[workspace]
members = ["vpn-core", "vpn-helper", "vpn-cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["native-tls", "cookies"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
tun = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
keyring = "3"
thiserror = "2"
chrono = "0.4"
once_cell = "1"
bytes = "1"
rand = "0.8"
