[package]
name = "vpn-helper"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "vpn-helper"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
