[workspace]

[package]
name = "polivpn-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "polivpn_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
vpn-core = { path = "../../vpn-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = [
    "windows-native",
    "apple-native",
    "linux-native-sync-persistent",
] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
